src/assets/css/styles.css
html,
body,
#root {
    background-color: #05161A;
    margin: 0;
    padding: 0;
    height: 100vh;
    width: 100%;
    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
    color: white;
    display: flex;
    justify-content: center;
    overflow-y: auto;
}

body::-webkit-scrollbar {
    width: 0;
    height: 0;
}

input::-ms-reveal,
input::-ms-clear {
    display: none;
}

* {
    box-sizing: border-box;
}

h1 {
    text-align: center;
    color: #4CAF50;
    margin-top: 40px;
    margin-bottom: 10px;
}

